[project]
name = "paymentgateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "sqlalchemy>=2.0.46",
    "stripe>=14.3.0",
    "uvicorn>=0.41.0",
]
